--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,31 @@ body {
     margin: 0;
     background-color: #f0f0f0;
 }
+
 nav {
-    margin-bottom: 20px;
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    text-align: center;
 }
+
 nav ul {
     list-style: none;
     padding: 0;
-    display: flex;
+    display: inline-flex;
     gap: 15px;
 }
+
 nav ul li {
     display: inline;
 }
+
 nav ul li a {
     text-decoration: none;
     color: #333;
     font-size: 18px;
 }
+
 .content {
     text-align: center;
     font-size: 24px;
