--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     font-size: 1.5em;
 }
 
+/* NAVIGATION SECTION */
 nav {
     position: fixed;
     top: 0;
@@ -40,6 +41,7 @@ nav ul li a {
     color: #333;
 }
 
+/* HOME SECTION */
 .home-section {
     display: flex;
     flex-direction: column;
@@ -56,36 +58,7 @@ nav ul li a {
     height: auto; 
 }
 
-.bio-section {
-    padding-top: 4em;
-}
-
-.bio-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start; 
-    height: 100vh; 
-    text-align: left;
-}
-
-.bio-content p {
-    color: #555;
-    font-size: 0.8em;
-}
-
-.spacer {
-    display: block; /* Makes the span act like a block (creating a line break) */
-    height: 20px;   /* Controls the height of the blank space */
-}
-
-.bio-content img {
-    width: 100%;
-    height: auto;
-    max-width: 20em; 
-    border-radius: 10px;
-}
-
+/* WORK SECTION */
 .work-section {
     width: 100%;
     min-height: 100vh;
@@ -95,14 +68,12 @@ nav ul li a {
     padding-top: 4em;
 }
 
-/* Single-column grid layout */
 .gallery {
     display: grid;
     grid-template-columns: 1fr; 
     grid-gap: 40px; 
 }
 
-/* Gallery item (image + title) */
 .gallery-item {
     display: flex;
     flex-direction: column;
@@ -121,17 +92,16 @@ nav ul li a {
     margin-top: 10px;
 }
 
-/* Alignment styles */
 .gallery-item.left {
-    align-items: flex-start; /* Align items to the left */
+    align-items: flex-start; 
 }
 
 .gallery-item.center {
-    align-items: center; /* Align items to the center */
+    align-items: center; 
 }
 
 .gallery-item.right {
-    align-items: flex-end; /* Align items to the right */
+    align-items: flex-end; 
 }
 
 .gallery-item.vertical img {
@@ -139,42 +109,74 @@ nav ul li a {
     width: auto;
 }
 
-/* Contact Section */
+/* BIO SECTION */
+.bio-section {
+    padding-top: 4em;
+}
+
+.bio-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start; 
+    height: 100vh; 
+    text-align: left;
+}
+
+.bio-content p {
+    color: #555;
+    font-size: 1em;
+}
+
+.spacer {
+    display: block; 
+    height: 20px;  
+}
+
+.bio-content img {
+    width: 100%;
+    height: auto;
+    max-width: 600px; 
+    border-radius: 10px;
+}
+
+/* CONTACT SECTION */
 .contact-section {
     display: flex;
-    flex-direction: column;   /* Arrange text above icons */
-    justify-content: center;  /* Center content horizontally */
-    align-items: center;      /* Center content vertically */
-    min-height: 100vh;        /* Make sure the section takes full screen height */
+    flex-direction: column;  
+    justify-content: flex-end;  
+    align-items: center;
+    height: 80vh;     
 }
 
 .contact-section p {           
-    margin-bottom: 20px;       /* Space between text and icons */
+    margin-bottom: 20px;    
 }
 
-/* Icon styling */
 .contact-section a {
-    display: inline-block; /* Ensures the link wraps the entire image */
-    margin: 0 20px; /* Space between the icons */
+    display: inline-block; 
+    margin: 0 20px; 
 }
 
 .contact-section img {
-    width: 50px; /* Icon size */
+    width: 50px; 
     height: auto;
     border-radius: 8px;
-    transition: transform 0.3s ease; /* Hover effect */
+    transition: transform 0.3s ease; 
 }
 
 .contact-section img:hover {
-    transform: scale(1.2); /* Slightly enlarge the icon on hover */
+    transform: scale(1.2); 
 }
 
 /* Media query for mobile */
 @media (max-width: 768px) {
+    /* HOME SECTION */
     .home-section {
         height: auto;
     }
 
+    /* WORK SECTION */
     .work-section {
         padding-top: 3em;
     }
@@ -182,7 +184,23 @@ nav ul li a {
     .content img {
         width: 100%; 
     }
+    .gallery-item.left, .gallery-item.center, .gallery-item.right {
+        align-items: center;
+    }
 
+    .gallery-item img {
+        max-width: 90%; 
+    }
+
+    .gallery-item.vertical img {
+        max-height: 300px;
+    }
+
+    .gallery-item p {
+        font-size: 0.8em;
+    }
+
+    /* BIO SECTION */
     .bio-content {
         grid-template-columns: 1fr; 
         text-align: center;
@@ -201,24 +219,9 @@ nav ul li a {
         max-width: 80%; 
     }
 
-    .gallery-item.left, .gallery-item.center, .gallery-item.right {
-        align-items: center;
-    }
-
-    .gallery-item img {
-        max-width: 90%; /* Scale down image size for mobile */
-    }
-
-    .gallery-item.vertical img {
-        max-height: 300px;
-    }
-
-    .gallery-item p {
-        font-size: 0.8em;
-    }
-
+    /* CONTACT SECTION */
     .contact-section img {
-        width: 40px; /* Adjust icon size for smaller screens */
+        width: 40px; 
     }
 
     .contact-section {
