--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ nav ul li a {
 }
 
 .home-section img {
+    margin-top: 80px;
     width: 50%; 
     height: auto; 
 }
@@ -89,9 +90,6 @@ nav ul li a {
 .gallery-item img {
     max-width: 100%;  
     height: auto;  
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    transition: transform 0.3s ease;
 }
 
 .gallery-item p {
@@ -230,7 +228,7 @@ nav ul li a {
         grid-template-columns: 1fr; 
         text-align: center;
         flex-direction: column-reverse;
-        padding-top: 18em;
+        padding-top: 25em;
         align-items: center;
     }
 
