--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ nav ul li a {
 
 /* BIO SECTION */
 .bio-section {
-    padding-top: 4em;
+    padding-top: 8em;
 }
 
 .bio-content {
@@ -132,13 +132,15 @@ nav ul li a {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start; 
-    height: 100vh; 
+    height: 80vh; 
     text-align: left;
 }
 
 .bio-content p {
     color: #555;
     font-size: 20px;
+    margin-top: 0;
+    font-weight: 200;
 }
 
 .spacer {
@@ -149,8 +151,9 @@ nav ul li a {
 .bio-content img {
     width: 100%;
     height: auto;
-    max-width: 600px; 
+    max-width: 300px; 
     border-radius: 10px;
+    margin-left: 40px;
 }
 
 /* CONTACT SECTION */
@@ -159,7 +162,7 @@ nav ul li a {
     flex-direction: column;  
     justify-content: flex-end;  
     align-items: center;
-    height: 80vh;     
+    height: 30vh;     
 }
 
 .contact-section p {           
@@ -193,15 +196,19 @@ nav ul li a {
         height: auto;
     }
 
+    .home-section img {
+        width: 80%;
+    }
+
     /* WORK SECTION */
     .work-content {
-        padding: 10px;
+        padding: 0;
     }
 
     .work-section {
-        padding-top: 3em;
         position: relative;
-        margin-bottom: 10em;
+        margin-bottom: 5em;
+        width: 100%;
     }
 
     .content img {
@@ -220,7 +227,7 @@ nav ul li a {
     }
 
     .gallery-item p {
-        font-size: 0.8em;
+        font-size: 0.6em;
     }
 
     /* BIO SECTION */
@@ -229,7 +236,6 @@ nav ul li a {
         text-align: center;
         flex-direction: column-reverse;
         padding-top: 25em;
-        align-items: center;
     }
 
     .bio-section h2 {
@@ -238,8 +244,8 @@ nav ul li a {
     }
 
     .bio-content img {
-        margin-top: 20px; 
         max-width: 80%; 
+        margin-bottom: 20px;
     }
 
     /* CONTACT SECTION */
